deleted cells with info about Jupyter
This commit was created by Deepnote. Project url: https://deepnote.com/project/17ec01e5-7d81-4f3a-b658-4eeaa6ceeb26

--- a/deepnote/1_Introduction_to_Jupyter_and_Markdown/Intro-Jupyter.ipynb
+++ b/deepnote/1_Introduction_to_Jupyter_and_Markdown/Intro-Jupyter.ipynb
@@ -17,7 +17,7 @@
     },
     {
       "cell_type": "markdown",
-      "source": "[Deepnote](https://deepnote.com/) is a provider of computational notebooks and services. \n\nTheir notebooks \n* are easy to use and set up, making them perfect tools for beginners\n* allow realtime collaborations, which is very useful when working with others on projects\n* shareable, so you can convert them to a webpage, blog, or send via a link to anyone you want\n\nTheir notebooks are based on **[Jupyter](http://jupyter.org/)**, so transfering information and knowledge between these two systems is very easy.",
+      "source": "[Deepnote](https://deepnote.com/) is a provider of cloud-based computational notebooks and services. \n\nTheir notebooks \n* are easy to use and set up, making them perfect tools for beginners\n* allow realtime collaborations, which is very useful when working with others on projects\n* shareable, so you can convert them to a webpage, blog, or send via a link to anyone you want\n\nTheir notebooks are based on **[Jupyter](http://jupyter.org/)**, so transfering information and knowledge between these two systems is very easy (as long as you have a working **[Jupyter](http://jupyter.org/)** installation).",
       "metadata": {
         "deepnote_app_coordinates": {
           "h": 5,
@@ -32,7 +32,18 @@
     },
     {
       "cell_type": "markdown",
-      "source": "A note book is composed of cells/blocks like the one you are reading. There are various types of cells/blocks:\n\n* [Text cells/blocks](https://deepnote.com/docs/text-editing), which include \n\n![]()",
+      "source": "# What is a notebook?",
+      "metadata": {
+        "is_collapsed": false,
+        "formattedRanges": [],
+        "cell_id": "761f94d646ae43c1bf1d05fa2577e0e8",
+        "deepnote_cell_type": "text-cell-h1"
+      },
+      "block_group": "761f94d646ae43c1bf1d05fa2577e0e8"
+    },
+    {
+      "cell_type": "markdown",
+      "source": "A notebook is what you are reading right now. A bunch of text, code, figures, and other elements. Deepnote notebooks are composed of cells/blocks like the one you are reading. \n\nThere are various types of cells/blocks:\n\n* [Text cells/blocks](https://deepnote.com/docs/text-editing), which include \n\n![]()",
       "metadata": {
         "deepnote_app_coordinates": {
           "h": 5,
@@ -79,80 +90,7 @@
     },
     {
       "cell_type": "markdown",
-      "source": "Deepnote has an intergrated file system that allows you to upload and download data, figures, and other typoes of files. See this [introduction to their filesystem](https://deepnote.com/docs/importing-data-to-deepnote).",
-      "metadata": {
-        "deepnote_app_coordinates": {
-          "h": 5,
-          "w": 12,
-          "x": 0,
-          "y": 0
-        },
-        "cell_id": "0f9361eb3a804b6b9d3f26c11000b856",
-        "deepnote_cell_type": "markdown"
-      },
-      "block_group": "116fa6c4d0d54a02b03a3d2751b83400"
-    },
-    {
-      "cell_type": "markdown",
-      "source": "# <center>Introduction to</center> \n<center><img src=\"https://upload.wikimedia.org/wikipedia/commons/3/38/Jupyter_logo.svg\" alt=\"Jupyter\" width=300/></center>",
-      "metadata": {
-        "tags": [],
-        "slideshow": {
-          "slide_type": "slide"
-        },
-        "user_expressions": [],
-        "deepnote_app_coordinates": {
-          "h": 5,
-          "w": 12,
-          "x": 0,
-          "y": 0
-        },
-        "cell_id": "e64d1e720d234a3888ab3eb0e59dcfe5",
-        "deepnote_cell_type": "markdown"
-      },
-      "block_group": "6cf809a7a3ad4e3f80c5382379dfdf60"
-    },
-    {
-      "cell_type": "markdown",
-      "source": "**[Jupyter](http://jupyter.org/)** is a \n\n* free software\n* open standards\n* web services \n\nfor **interactive computing** across all programming languages.",
-      "metadata": {
-        "slideshow": {
-          "slide_type": "slide"
-        },
-        "user_expressions": [],
-        "deepnote_app_coordinates": {
-          "h": 5,
-          "w": 12,
-          "x": 0,
-          "y": 0
-        },
-        "cell_id": "8664b6475d134838ade0a4e3a477c90b",
-        "deepnote_cell_type": "markdown"
-      },
-      "block_group": "8664b6475d134838ade0a4e3a477c90b"
-    },
-    {
-      "cell_type": "markdown",
-      "source": "Very powerful tool to produce reproducible code and analyses:\n\n* Powerful interactive shells:\n\n    * Terminal - `jupyter console`\n    \n    * Qt-based - `jupyter qtconsole`\n    \n    * Notebooks - `jupyter notebook` or `jupyter lab`",
-      "metadata": {
-        "slideshow": {
-          "slide_type": "subslide"
-        },
-        "user_expressions": [],
-        "deepnote_app_coordinates": {
-          "h": 5,
-          "w": 12,
-          "x": 0,
-          "y": 0
-        },
-        "cell_id": "778ead52ebcb4ee88077904fbc68a426",
-        "deepnote_cell_type": "markdown"
-      },
-      "block_group": "778ead52ebcb4ee88077904fbc68a426"
-    },
-    {
-      "cell_type": "markdown",
-      "source": "* A browser-based notebook with support for \n    * code\n    * text\n    * mathematical expressions\n    * inline plots\n    * other rich media\n    * interactive data visualization \n    * use of GUI toolkits\n* Flexible, embeddable interpreters to load into your own projects.\n* Easy to use, high performance tools for parallel computing.",
+      "source": "* So, it is a browser-based notebook with support for \n    * code\n    * text\n    * mathematical expressions\n    * inline plots\n    * other rich media\n    * interactive data visualization \n    * use of GUI toolkits\n* Flexible, embeddable interpreters to load into your own projects.\n* Easy to use, high performance tools for parallel computing.",
       "metadata": {
         "slideshow": {
           "slide_type": "subslide"
@@ -167,26 +105,22 @@
         "cell_id": "23dfc16eeba242238d003496e6f5f4ce",
         "deepnote_cell_type": "markdown"
       },
-      "block_group": "23dfc16eeba242238d003496e6f5f4ce"
+      "block_group": "116fa6c4d0d54a02b03a3d2751b83400"
     },
     {
       "cell_type": "markdown",
-      "source": "**Jupyter** is an open-source project that provides open-standards, and services for interactive computing across dozens of programming languages, including ``Python``, ``R``, ``Stata`` and many others used by economists.",
+      "source": "Deepnote has an intergrated file system that allows you to upload and download data, figures, and other types of files. See this [introduction to their filesystem](https://deepnote.com/docs/importing-data-to-deepnote).",
       "metadata": {
-        "slideshow": {
-          "slide_type": "subslide"
-        },
-        "user_expressions": [],
         "deepnote_app_coordinates": {
           "h": 5,
           "w": 12,
           "x": 0,
           "y": 0
         },
-        "cell_id": "308d49cf64254af4a84f514f718d35b2",
+        "cell_id": "0f9361eb3a804b6b9d3f26c11000b856",
         "deepnote_cell_type": "markdown"
       },
-      "block_group": "308d49cf64254af4a84f514f718d35b2"
+      "block_group": "85c6addabea94ec18bd9d9aecb248097"
     },
     {
       "cell_type": "markdown",
@@ -215,6 +149,7 @@
         },
         "source_hash": "9290b72e",
         "code_folding": [],
+        "is_code_hidden": true,
         "execution_start": 1680180910036,
         "execution_millis": 3,
         "deepnote_app_coordinates": {
