added Jupyter and search for help
This commit was created by Deepnote. Project url: https://deepnote.com/project/17ec01e5-7d81-4f3a-b658-4eeaa6ceeb26

--- a/deepnote/1_Introduction_to_Jupyter_and_Markdown/Intro-Jupyter.ipynb
+++ b/deepnote/1_Introduction_to_Jupyter_and_Markdown/Intro-Jupyter.ipynb
@@ -75,7 +75,7 @@
     },
     {
       "cell_type": "markdown",
-      "source": "* Code blocks to perform computations and other operations\n* [Chart blocks](https://deepnote.com/docs/chart-blocks) to visualiza data without having to write code\n* [Input blocks](https://deepnote.com/docs/input-blocks) to allow users to input values/data ",
+      "source": "* Markdown blocks which you can use to write text, add images, or html code to change their look\n* Code blocks to perform computations and other operations\n* [Chart blocks](https://deepnote.com/docs/chart-blocks) to visualiza data without having to write code\n* [Input blocks](https://deepnote.com/docs/input-blocks) to allow users to input values/data ",
       "metadata": {
         "deepnote_app_coordinates": {
           "h": 5,
@@ -121,6 +121,52 @@
         "deepnote_cell_type": "markdown"
       },
       "block_group": "85c6addabea94ec18bd9d9aecb248097"
+    },
+    {
+      "cell_type": "markdown",
+      "source": "> Since Deepnote is based on Jupyter, it is very easy to find information on how to do things in it by searching on Google or Stackoverflow or asking ChatGPT.",
+      "metadata": {
+        "color": "green",
+        "formattedRanges": [
+          {
+            "url": "https://jupyter.org/",
+            "type": "link",
+            "ranges": [],
+            "toCodePoint": 34,
+            "fromCodePoint": 27
+          },
+          {
+            "url": "https://www.google.com/",
+            "type": "link",
+            "ranges": [],
+            "toCodePoint": 120,
+            "fromCodePoint": 114
+          },
+          {
+            "url": "https://stackoverflow.com/",
+            "type": "link",
+            "ranges": [],
+            "toCodePoint": 137,
+            "fromCodePoint": 124
+          },
+          {
+            "url": "https://chat.openai.com/",
+            "type": "link",
+            "ranges": [],
+            "toCodePoint": 155,
+            "fromCodePoint": 148
+          }
+        ],
+        "deepnote_app_coordinates": {
+          "h": 2,
+          "w": 8,
+          "x": 0,
+          "y": 0
+        },
+        "cell_id": "7d90f02ea06f44878a94da8f87edde28",
+        "deepnote_cell_type": "text-cell-callout"
+      },
+      "block_group": "7d90f02ea06f44878a94da8f87edde28"
     },
     {
       "cell_type": "markdown",
