--- a/deepnote/4_Introduction_to_Python_III_-_Functions_and_Packages_/Init.ipynb
+++ b/deepnote/4_Introduction_to_Python_III_-_Functions_and_Packages_/Init.ipynb
@@ -14,9 +14,9 @@
       "source": "%%bash\n# If your project has a 'requirements.txt' file, we'll install it here apart from blacklisted packages that interfere with Deepnote (see above).\nif test -f requirements.txt\n  then\n    sed -i '/jedi/d;/jupyter/d;' ./requirements.txt\n    pip install -r ./requirements.txt\n  else echo \"There's no requirements.txt, so nothing to install. This is the case with most projects.\"\nfi",
       "metadata": {
         "cell_id": "aab2cadac8bb4c2d83865502a6ec2407",
-        "source_hash": "60b37886",
-        "execution_start": 1681148727598,
-        "execution_millis": 68,
+        "source_hash": null,
+        "execution_start": 1698682234774,
+        "execution_millis": 409,
         "deepnote_to_be_reexecuted": false,
         "deepnote_cell_type": "code"
       },
@@ -27,7 +27,7 @@
           "output_type": "stream"
         }
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "block_group": "aab2cadac8bb4c2d83865502a6ec2407"
     },
     {
