--- a/deepnote/1_Introduction_to_Data_Analysis_with_Pandas/Init.ipynb
+++ b/deepnote/1_Introduction_to_Data_Analysis_with_Pandas/Init.ipynb
@@ -14,9 +14,9 @@
       "source": "%%bash\n# If your project has a 'requirements.txt' file, we'll install it here apart from blacklisted packages that interfere with Deepnote (see above).\nif test -f requirements.txt\n  then\n    sed -i '/jedi/d;/jupyter/d;' ./requirements.txt\n    pip install -r ./requirements.txt\n  else echo \"There's no requirements.txt, so nothing to install. This is the case with most projects.\"\nfi",
       "metadata": {
         "cell_id": "df1044d3296e4c138b744a169f8611ab",
-        "source_hash": "60b37886",
-        "execution_start": 1698261739370,
-        "execution_millis": 67,
+        "source_hash": null,
+        "execution_start": 1699292249285,
+        "execution_millis": 36,
         "deepnote_to_be_reexecuted": false,
         "deepnote_cell_type": "code"
       },
@@ -27,7 +27,7 @@
           "output_type": "stream"
         }
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "block_group": "df1044d3296e4c138b744a169f8611ab"
     },
     {
