updated after Wiki changes
This commit was created by Deepnote. Project url: https://deepnote.com/project/09d7a592-44de-45cd-8405-cff90bcdfaae

--- a/deepnote/1_Introduction_to_Data_Analysis_with_Pandas/Intro-Data-Analysis-Pandas-old.ipynb
+++ b/deepnote/1_Introduction_to_Data_Analysis_with_Pandas/Intro-Data-Analysis-Pandas-old.ipynb
@@ -166,6 +166,7 @@
         "deepnote_cell_type": "code"
       },
       "outputs": [],
+      "outputs_reference": null,
       "execution_count": null,
       "block_group": "d376094c68b44c87b4c18a9192648bc2"
     },
@@ -1705,6 +1706,7 @@
           "metadata": {}
         }
       ],
+      "outputs_reference": null,
       "execution_count": null,
       "block_group": "2700e21f12f6401382eed544fccc16e8"
     },
@@ -2031,6 +2033,7 @@
           "metadata": {}
         }
       ],
+      "outputs_reference": null,
       "execution_count": null,
       "block_group": "bdc7ca41296c4922895a341ad380ec6f"
     },
@@ -2071,6 +2074,7 @@
           "metadata": {}
         }
       ],
+      "outputs_reference": null,
       "execution_count": null,
       "block_group": "ab46afbd3c474755adbdfc36d59f5fcb"
     },
@@ -2355,6 +2359,7 @@
           "metadata": {}
         }
       ],
+      "outputs_reference": null,
       "execution_count": null,
       "block_group": "1b6a290283d54caa9b206b9bd369ed6e"
     },
@@ -2395,6 +2400,7 @@
           "metadata": {}
         }
       ],
+      "outputs_reference": null,
       "execution_count": null,
       "block_group": "1c709d4f19d44a30ba903c557b16818a"
     },
@@ -2666,6 +2672,7 @@
           "metadata": {}
         }
       ],
+      "outputs_reference": null,
       "execution_count": null,
       "block_group": "00779e83bab24b2aa8b1c423142943f8"
     },
@@ -2977,6 +2984,7 @@
           "metadata": {}
         }
       ],
+      "outputs_reference": null,
       "execution_count": null,
       "block_group": "91c5e68f1efe4e3faa015c4a2276d5a0"
     },
@@ -3018,6 +3026,7 @@
           "metadata": {}
         }
       ],
+      "outputs_reference": null,
       "execution_count": null,
       "block_group": "eb26ce957718476a897f289a93f3870e"
     },
@@ -3384,6 +3393,7 @@
           "metadata": {}
         }
       ],
+      "outputs_reference": null,
       "execution_count": null,
       "block_group": "75195c5233c6480fb885bcc143df23d7"
     },
@@ -3693,6 +3703,7 @@
           "metadata": {}
         }
       ],
+      "outputs_reference": null,
       "execution_count": null,
       "block_group": "4339b7fb819d47b78ad0c2de1e7f4b90"
     },
@@ -4029,6 +4040,7 @@
           "metadata": {}
         }
       ],
+      "outputs_reference": null,
       "execution_count": null,
       "block_group": "9d3f40705442455dab0830f199be4e50"
     },
@@ -4070,6 +4082,7 @@
           "metadata": {}
         }
       ],
+      "outputs_reference": null,
       "execution_count": null,
       "block_group": "35aad656a1c44fa7b95b03c2e1b51b6c"
     },
@@ -4088,6 +4101,7 @@
         "deepnote_cell_type": "code"
       },
       "outputs": [],
+      "outputs_reference": null,
       "execution_count": null,
       "block_group": "c0b80611ea2641aaaa5ae888fce489d8"
     },
@@ -4115,6 +4129,7 @@
           "metadata": {}
         }
       ],
+      "outputs_reference": null,
       "execution_count": null,
       "block_group": "e51cc065e0df4ceabb4b0d400684f89c"
     },
@@ -4355,6 +4370,7 @@
           "metadata": {}
         }
       ],
+      "outputs_reference": null,
       "execution_count": null,
       "block_group": "20055f36c08e479b85bb1bb5cb6d782d"
     },
@@ -4677,6 +4693,7 @@
           "metadata": {}
         }
       ],
+      "outputs_reference": null,
       "execution_count": null,
       "block_group": "cf1338a40cc344a29a457896734208dd"
     },
@@ -5457,6 +5474,7 @@
           "metadata": {}
         }
       ],
+      "outputs_reference": null,
       "execution_count": null,
       "block_group": "05c413065be04041abade622b5d7bb8a"
     },
@@ -5498,6 +5516,7 @@
           "metadata": {}
         }
       ],
+      "outputs_reference": null,
       "execution_count": null,
       "block_group": "790701f45f6f4eafa8fea5cd376a3646"
     },
@@ -5529,6 +5548,7 @@
         "deepnote_cell_type": "code"
       },
       "outputs": [],
+      "outputs_reference": null,
       "execution_count": null,
       "block_group": "3d90700c7c05451cab4ed06b58058a79"
     },
@@ -5556,6 +5576,7 @@
           "metadata": {}
         }
       ],
+      "outputs_reference": null,
       "execution_count": null,
       "block_group": "344b71e19f0b4772862a167a67f0e87c"
     },
@@ -5583,6 +5604,7 @@
           "metadata": {}
         }
       ],
+      "outputs_reference": null,
       "execution_count": null,
       "block_group": "fbbb7bee04e149309a15d4987cd97890"
     },
@@ -5678,6 +5700,7 @@
           "output_type": "display_data"
         }
       ],
+      "outputs_reference": null,
       "execution_count": null,
       "block_group": "418563f47e944d959d454befe280e5ff"
     },
@@ -5718,6 +5741,7 @@
           "output_type": "display_data"
         }
       ],
+      "outputs_reference": null,
       "execution_count": null,
       "block_group": "7f5eeb2696244b7ba676514ae616dae4"
     },
@@ -5763,6 +5787,7 @@
           "output_type": "display_data"
         }
       ],
+      "outputs_reference": null,
       "execution_count": null,
       "block_group": "5f4504e34b70401f9448a4447ee9016b"
     },
@@ -5816,6 +5841,7 @@
           "metadata": {}
         }
       ],
+      "outputs_reference": null,
       "execution_count": null,
       "block_group": "b3b22497090a445391b22ab23157744b"
     },
@@ -5840,6 +5866,7 @@
           "output_type": "stream"
         }
       ],
+      "outputs_reference": null,
       "execution_count": null,
       "block_group": "9029c1b712a147f98ee811b0011f33af"
     },
@@ -5880,6 +5907,7 @@
           "metadata": {}
         }
       ],
+      "outputs_reference": null,
       "execution_count": null,
       "block_group": "54907a01f99640db861e6ef346999c98"
     },
@@ -5920,6 +5948,7 @@
           "metadata": {}
         }
       ],
+      "outputs_reference": null,
       "execution_count": null,
       "block_group": "9502b21170cd47418c7824fa2009c571"
     },
@@ -5958,6 +5987,7 @@
           "output_type": "stream"
         }
       ],
+      "outputs_reference": null,
       "execution_count": null,
       "block_group": "53fdd302230f480da9bda7e6eb4f20ad"
     },
@@ -6011,6 +6041,7 @@
           "metadata": {}
         }
       ],
+      "outputs_reference": null,
       "execution_count": null,
       "block_group": "bbf362ba3b5045d0825372f3c08ca55f"
     },
@@ -6184,6 +6215,7 @@
           "metadata": {}
         }
       ],
+      "outputs_reference": null,
       "execution_count": null,
       "block_group": "796c342c2e42483d9829db954f1204e3"
     },
@@ -6306,6 +6338,7 @@
           "metadata": {}
         }
       ],
+      "outputs_reference": null,
       "execution_count": null,
       "block_group": "cdfeb0abf9604333bd5aca12a15527c7"
     },
@@ -6468,6 +6501,7 @@
           "metadata": {}
         }
       ],
+      "outputs_reference": null,
       "execution_count": null,
       "block_group": "7446a5d01d1a459b8aca4df75a97d900"
     },
@@ -6631,6 +6665,7 @@
           "metadata": {}
         }
       ],
+      "outputs_reference": null,
       "execution_count": null,
       "block_group": "8b0b972d67b441c1afaa71ab9901370a"
     },
@@ -7007,6 +7042,7 @@
           "metadata": {}
         }
       ],
+      "outputs_reference": null,
       "execution_count": null,
       "block_group": "c0966c1ab43b4fb684e2b951519c27f0"
     },
@@ -7066,6 +7102,7 @@
         "deepnote_cell_type": "code"
       },
       "outputs": [],
+      "outputs_reference": null,
       "execution_count": null,
       "block_group": "26f01abf097041a38847160481f5cb4d"
     },
@@ -7452,6 +7489,7 @@
           "metadata": {}
         }
       ],
+      "outputs_reference": null,
       "execution_count": null,
       "block_group": "b7142e5c41fe4775b60f9c7c76165bfa"
     },
@@ -7931,6 +7969,7 @@
           "metadata": {}
         }
       ],
+      "outputs_reference": null,
       "execution_count": null,
       "block_group": "ff5ffac6c40b48b79ff51f6237a4785b"
     },
@@ -8451,6 +8490,7 @@
           "metadata": {}
         }
       ],
+      "outputs_reference": null,
       "execution_count": null,
       "block_group": "bc28ea0326f74b2ea429fd39a08b0b1a"
     },
@@ -8619,46 +8659,10 @@
   "nbformat": 4,
   "nbformat_minor": 0,
   "metadata": {
-    "widgets": {
-      "application/vnd.jupyter.widget-state+json": {
-        "state": {},
-        "version_major": 2,
-        "version_minor": 0
-      }
-    },
-    "deepnote": {},
-    "kernelspec": {
-      "name": "python3",
-      "language": "python",
-      "display_name": "Python 3 (ipykernel)"
-    },
-    "celltoolbar": "Slideshow",
-    "nbTranslate": {
-      "hotkey": "alt-t",
-      "sourceLang": "en",
-      "targetLang": "fr",
-      "displayLangs": [
-        "*"
-      ],
-      "langInMainMenu": true,
-      "useGoogleTranslate": true
-    },
-    "language_info": {
-      "name": "python",
-      "version": "3.9.15",
-      "mimetype": "text/x-python",
-      "file_extension": ".py",
-      "pygments_lexer": "ipython3",
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "nbconvert_exporter": "python"
-    },
-    "deepnote_notebook_id": "af3a542cf14648f180043a15c04dc725",
     "deepnote_persisted_session": {
       "createdAt": "2023-10-25T19:31:19.577Z"
     },
+    "deepnote_notebook_id": "af3a542cf14648f180043a15c04dc725",
     "deepnote_execution_queue": []
   }
 }
