--- a/deepnote/1_Introduction_to_Data_Analysis_with_Pandas/Init.ipynb
+++ b/deepnote/1_Introduction_to_Data_Analysis_with_Pandas/Init.ipynb
@@ -27,6 +27,7 @@
           "output_type": "stream"
         }
       ],
+      "outputs_reference": null,
       "execution_count": null,
       "block_group": "df1044d3296e4c138b744a169f8611ab"
     },
@@ -42,8 +43,6 @@
   "nbformat": 4,
   "nbformat_minor": 0,
   "metadata": {
-    "deepnote": {},
-    "orig_nbformat": 2,
     "deepnote_notebook_id": "02d95b41bd9e411b8989a7eada5c231c",
     "deepnote_execution_queue": []
   }
