updated natural earth link
This commit was created by Deepnote. Project url: https://deepnote.com/project/b928a93e-fd2c-49da-903d-eba3f1d11670

--- a/deepnote/4_Working_with_Penn_World_Table/Init.ipynb
+++ b/deepnote/4_Working_with_Penn_World_Table/Init.ipynb
@@ -14,9 +14,9 @@
       "source": "%%bash\n# If your project has a 'requirements.txt' file, we'll install it here apart from blacklisted packages that interfere with Deepnote (see above).\nif test -f requirements.txt\n  then\n    sed -i '/jedi/d;/jupyter/d;' ./requirements.txt\n    pip install -r ./requirements.txt\n  else echo \"There's no requirements.txt, so nothing to install. This is the case with most projects.\"\nfi",
       "metadata": {
         "cell_id": "24b717917a8245e3baa03521578bfc1e",
-        "source_hash": "60b37886",
-        "execution_start": 1692111947457,
-        "execution_millis": 38,
+        "source_hash": null,
+        "execution_start": 1698263641425,
+        "execution_millis": 33,
         "deepnote_to_be_reexecuted": false,
         "deepnote_cell_type": "code"
       },
@@ -27,7 +27,8 @@
           "output_type": "stream"
         }
       ],
-      "execution_count": 1,
+      "outputs_reference": null,
+      "execution_count": null,
       "block_group": "24b717917a8245e3baa03521578bfc1e"
     },
     {
@@ -42,8 +43,6 @@
   "nbformat": 4,
   "nbformat_minor": 0,
   "metadata": {
-    "deepnote": {},
-    "orig_nbformat": 2,
     "deepnote_notebook_id": "cf82815db9fc43028b83286a7341665a",
     "deepnote_execution_queue": []
   }
