updated natural earth link
This commit was created by Deepnote. Project url: https://deepnote.com/project/6edff53e-24cf-4345-9069-be947b9c4d19

--- a/deepnote/3_Working_with_World_Development_Indicators_/Init.ipynb
+++ b/deepnote/3_Working_with_World_Development_Indicators_/Init.ipynb
@@ -14,9 +14,9 @@
       "source": "%%bash\n# If your project has a 'requirements.txt' file, we'll install it here apart from blacklisted packages that interfere with Deepnote (see above).\nif test -f requirements.txt\n  then\n    sed -i '/jedi/d;/jupyter/d;' ./requirements.txt\n    pip install -r ./requirements.txt\n  else echo \"There's no requirements.txt, so nothing to install. This is the case with most projects.\"\nfi",
       "metadata": {
         "cell_id": "c862a851079946b083d2b7fbce20ac5a",
-        "source_hash": "60b37886",
-        "execution_start": 1692111652378,
-        "execution_millis": 28,
+        "source_hash": null,
+        "execution_start": 1699860409414,
+        "execution_millis": 52,
         "deepnote_to_be_reexecuted": false,
         "deepnote_cell_type": "code"
       },
@@ -27,7 +27,8 @@
           "output_type": "stream"
         }
       ],
-      "execution_count": 1,
+      "outputs_reference": null,
+      "execution_count": null,
       "block_group": "c862a851079946b083d2b7fbce20ac5a"
     },
     {
@@ -42,8 +43,6 @@
   "nbformat": 4,
   "nbformat_minor": 0,
   "metadata": {
-    "deepnote": {},
-    "orig_nbformat": 2,
     "deepnote_notebook_id": "ce559dfed3894c6ea5f7c948af00533c",
     "deepnote_execution_queue": []
   }
