added real centroids and faster distances
This commit was created by Deepnote. Project url: https://deepnote.com/project/a333cde9-e55c-4dd1-b88e-4922ac4b7514

--- a/deepnote/2_GIS_with_Python_-_Geometries/Init.ipynb
+++ b/deepnote/2_GIS_with_Python_-_Geometries/Init.ipynb
@@ -27,6 +27,7 @@
           "output_type": "stream"
         }
       ],
+      "outputs_reference": null,
       "execution_count": null,
       "block_group": "e578af8c559c4d05a39df23db402dd79"
     },
@@ -42,8 +43,6 @@
   "nbformat": 4,
   "nbformat_minor": 0,
   "metadata": {
-    "deepnote": {},
-    "orig_nbformat": 2,
     "deepnote_notebook_id": "93620715d5e04408a15581617f2ccce6",
     "deepnote_execution_queue": []
   }
