updated due to change in seaborn
This commit was created by Deepnote. Project url: https://deepnote.com/project/7a3684ea-c271-47fb-a818-6ef4755e5b7c

--- a/deepnote/3_GIS_with_Python_-_Rasters/Init.ipynb
+++ b/deepnote/3_GIS_with_Python_-_Rasters/Init.ipynb
@@ -27,6 +27,7 @@
           "output_type": "stream"
         }
       ],
+      "outputs_reference": null,
       "execution_count": 1,
       "block_group": "955592e1b4594c87b334d01989d88a80"
     },
@@ -42,8 +43,6 @@
   "nbformat": 4,
   "nbformat_minor": 0,
   "metadata": {
-    "deepnote": {},
-    "orig_nbformat": 2,
     "deepnote_notebook_id": "45a07780cabc407499ff5874c025b204",
     "deepnote_execution_queue": []
   }
