removed note at bottom
This commit was created by Deepnote. Project url: https://deepnote.com/project/3e551f22-faea-46c3-a77c-d376885f79c0

--- a/deepnote/2_Introduction_to_Python/Init.ipynb
+++ b/deepnote/2_Introduction_to_Python/Init.ipynb
@@ -14,9 +14,9 @@
       "source": "%%bash\n# If your project has a 'requirements.txt' file, we'll install it here apart from blacklisted packages that interfere with Deepnote (see above).\nif test -f requirements.txt\n  then\n    sed -i '/jedi/d;/jupyter/d;' ./requirements.txt\n    pip install -r ./requirements.txt\n  else echo \"There's no requirements.txt, so nothing to install. This is the case with most projects.\"\nfi",
       "metadata": {
         "cell_id": "f530e4a35c7547a7907694bf4640651c",
-        "source_hash": "60b37886",
-        "execution_start": 1681148812953,
-        "execution_millis": 0,
+        "source_hash": null,
+        "execution_start": 1698632290125,
+        "execution_millis": 65,
         "deepnote_to_be_reexecuted": false,
         "deepnote_cell_type": "code"
       },
@@ -27,8 +27,10 @@
           "output_type": "stream"
         }
       ],
-      "execution_count": 1,
-      "block_group": "f530e4a35c7547a7907694bf4640651c"
+      "outputs_reference": null,
+      "execution_count": null,
+      "block_group": "f530e4a35c7547a7907694bf4640651c",
+      "content_dependencies": null
     },
     {
       "cell_type": "markdown",
@@ -42,8 +44,6 @@
   "nbformat": 4,
   "nbformat_minor": 0,
   "metadata": {
-    "deepnote": {},
-    "orig_nbformat": 2,
     "deepnote_notebook_id": "ba593e1f9b6846e9841abbf034138bc3",
     "deepnote_execution_queue": []
   }
