updated Wiki GDPpc
This commit was created by Deepnote. Project url: https://deepnote.com/project/09d7a592-44de-45cd-8405-cff90bcdfaae

--- a/deepnote/1_Introduction_to_Data_Analysis_with_Pandas/Init.ipynb
+++ b/deepnote/1_Introduction_to_Data_Analysis_with_Pandas/Init.ipynb
@@ -14,9 +14,10 @@
       "source": "%%bash\n# If your project has a 'requirements.txt' file, we'll install it here apart from blacklisted packages that interfere with Deepnote (see above).\nif test -f requirements.txt\n  then\n    sed -i '/jedi/d;/jupyter/d;' ./requirements.txt\n    pip install -r ./requirements.txt\n  else echo \"There's no requirements.txt, so nothing to install. This is the case with most projects.\"\nfi",
       "metadata": {
         "cell_id": "df1044d3296e4c138b744a169f8611ab",
-        "source_hash": null,
-        "execution_start": 1699292249285,
-        "execution_millis": 36,
+        "source_hash": "60b37886",
+        "execution_start": 1730132369249,
+        "execution_millis": 80,
+        "execution_context_id": "bc3bd2be-c2c2-49d2-85a5-f99e653567bb",
         "deepnote_to_be_reexecuted": false,
         "deepnote_cell_type": "code"
       },
@@ -28,8 +29,9 @@
         }
       ],
       "outputs_reference": null,
-      "execution_count": null,
-      "block_group": "df1044d3296e4c138b744a169f8611ab"
+      "execution_count": 1,
+      "block_group": "df1044d3296e4c138b744a169f8611ab",
+      "content_dependencies": null
     },
     {
       "cell_type": "markdown",
