--- a/deepnote/1_Introduction_to_Data_Analysis_with_Pandas/Intro-Data-Analysis-Pandas-old.ipynb
+++ b/deepnote/1_Introduction_to_Data_Analysis_with_Pandas/Intro-Data-Analysis-Pandas-old.ipynb
@@ -168,7 +168,8 @@
       "outputs": [],
       "outputs_reference": null,
       "execution_count": null,
-      "block_group": "d376094c68b44c87b4c18a9192648bc2"
+      "block_group": "d376094c68b44c87b4c18a9192648bc2",
+      "content_dependencies": null
     },
     {
       "cell_type": "markdown",
@@ -1708,7 +1709,8 @@
       ],
       "outputs_reference": null,
       "execution_count": null,
-      "block_group": "2700e21f12f6401382eed544fccc16e8"
+      "block_group": "2700e21f12f6401382eed544fccc16e8",
+      "content_dependencies": null
     },
     {
       "cell_type": "code",
@@ -2035,7 +2037,8 @@
       ],
       "outputs_reference": null,
       "execution_count": null,
-      "block_group": "bdc7ca41296c4922895a341ad380ec6f"
+      "block_group": "bdc7ca41296c4922895a341ad380ec6f",
+      "content_dependencies": null
     },
     {
       "cell_type": "markdown",
@@ -2076,7 +2079,8 @@
       ],
       "outputs_reference": null,
       "execution_count": null,
-      "block_group": "ab46afbd3c474755adbdfc36d59f5fcb"
+      "block_group": "ab46afbd3c474755adbdfc36d59f5fcb",
+      "content_dependencies": null
     },
     {
       "cell_type": "markdown",
@@ -2361,7 +2365,8 @@
       ],
       "outputs_reference": null,
       "execution_count": null,
-      "block_group": "1b6a290283d54caa9b206b9bd369ed6e"
+      "block_group": "1b6a290283d54caa9b206b9bd369ed6e",
+      "content_dependencies": null
     },
     {
       "cell_type": "markdown",
@@ -2402,7 +2407,8 @@
       ],
       "outputs_reference": null,
       "execution_count": null,
-      "block_group": "1c709d4f19d44a30ba903c557b16818a"
+      "block_group": "1c709d4f19d44a30ba903c557b16818a",
+      "content_dependencies": null
     },
     {
       "cell_type": "code",
@@ -2674,7 +2680,8 @@
       ],
       "outputs_reference": null,
       "execution_count": null,
-      "block_group": "00779e83bab24b2aa8b1c423142943f8"
+      "block_group": "00779e83bab24b2aa8b1c423142943f8",
+      "content_dependencies": null
     },
     {
       "cell_type": "markdown",
@@ -2986,7 +2993,8 @@
       ],
       "outputs_reference": null,
       "execution_count": null,
-      "block_group": "91c5e68f1efe4e3faa015c4a2276d5a0"
+      "block_group": "91c5e68f1efe4e3faa015c4a2276d5a0",
+      "content_dependencies": null
     },
     {
       "cell_type": "markdown",
@@ -3028,7 +3036,8 @@
       ],
       "outputs_reference": null,
       "execution_count": null,
-      "block_group": "eb26ce957718476a897f289a93f3870e"
+      "block_group": "eb26ce957718476a897f289a93f3870e",
+      "content_dependencies": null
     },
     {
       "cell_type": "code",
@@ -3395,7 +3404,8 @@
       ],
       "outputs_reference": null,
       "execution_count": null,
-      "block_group": "75195c5233c6480fb885bcc143df23d7"
+      "block_group": "75195c5233c6480fb885bcc143df23d7",
+      "content_dependencies": null
     },
     {
       "cell_type": "markdown",
@@ -3705,7 +3715,8 @@
       ],
       "outputs_reference": null,
       "execution_count": null,
-      "block_group": "4339b7fb819d47b78ad0c2de1e7f4b90"
+      "block_group": "4339b7fb819d47b78ad0c2de1e7f4b90",
+      "content_dependencies": null
     },
     {
       "cell_type": "markdown",
@@ -4042,7 +4053,8 @@
       ],
       "outputs_reference": null,
       "execution_count": null,
-      "block_group": "9d3f40705442455dab0830f199be4e50"
+      "block_group": "9d3f40705442455dab0830f199be4e50",
+      "content_dependencies": null
     },
     {
       "cell_type": "markdown",
@@ -4084,7 +4096,8 @@
       ],
       "outputs_reference": null,
       "execution_count": null,
-      "block_group": "35aad656a1c44fa7b95b03c2e1b51b6c"
+      "block_group": "35aad656a1c44fa7b95b03c2e1b51b6c",
+      "content_dependencies": null
     },
     {
       "cell_type": "code",
@@ -4103,7 +4116,8 @@
       "outputs": [],
       "outputs_reference": null,
       "execution_count": null,
-      "block_group": "c0b80611ea2641aaaa5ae888fce489d8"
+      "block_group": "c0b80611ea2641aaaa5ae888fce489d8",
+      "content_dependencies": null
     },
     {
       "cell_type": "code",
@@ -4131,7 +4145,8 @@
       ],
       "outputs_reference": null,
       "execution_count": null,
-      "block_group": "e51cc065e0df4ceabb4b0d400684f89c"
+      "block_group": "e51cc065e0df4ceabb4b0d400684f89c",
+      "content_dependencies": null
     },
     {
       "cell_type": "markdown",
@@ -4372,7 +4387,8 @@
       ],
       "outputs_reference": null,
       "execution_count": null,
-      "block_group": "20055f36c08e479b85bb1bb5cb6d782d"
+      "block_group": "20055f36c08e479b85bb1bb5cb6d782d",
+      "content_dependencies": null
     },
     {
       "cell_type": "code",
@@ -4695,7 +4711,8 @@
       ],
       "outputs_reference": null,
       "execution_count": null,
-      "block_group": "cf1338a40cc344a29a457896734208dd"
+      "block_group": "cf1338a40cc344a29a457896734208dd",
+      "content_dependencies": null
     },
     {
       "cell_type": "markdown",
@@ -5476,7 +5493,8 @@
       ],
       "outputs_reference": null,
       "execution_count": null,
-      "block_group": "05c413065be04041abade622b5d7bb8a"
+      "block_group": "05c413065be04041abade622b5d7bb8a",
+      "content_dependencies": null
     },
     {
       "cell_type": "markdown",
@@ -5518,7 +5536,8 @@
       ],
       "outputs_reference": null,
       "execution_count": null,
-      "block_group": "790701f45f6f4eafa8fea5cd376a3646"
+      "block_group": "790701f45f6f4eafa8fea5cd376a3646",
+      "content_dependencies": null
     },
     {
       "cell_type": "markdown",
@@ -5550,7 +5569,8 @@
       "outputs": [],
       "outputs_reference": null,
       "execution_count": null,
-      "block_group": "3d90700c7c05451cab4ed06b58058a79"
+      "block_group": "3d90700c7c05451cab4ed06b58058a79",
+      "content_dependencies": null
     },
     {
       "cell_type": "code",
@@ -5578,7 +5598,8 @@
       ],
       "outputs_reference": null,
       "execution_count": null,
-      "block_group": "344b71e19f0b4772862a167a67f0e87c"
+      "block_group": "344b71e19f0b4772862a167a67f0e87c",
+      "content_dependencies": null
     },
     {
       "cell_type": "code",
@@ -5606,7 +5627,8 @@
       ],
       "outputs_reference": null,
       "execution_count": null,
-      "block_group": "fbbb7bee04e149309a15d4987cd97890"
+      "block_group": "fbbb7bee04e149309a15d4987cd97890",
+      "content_dependencies": null
     },
     {
       "cell_type": "markdown",
@@ -5702,7 +5724,8 @@
       ],
       "outputs_reference": null,
       "execution_count": null,
-      "block_group": "418563f47e944d959d454befe280e5ff"
+      "block_group": "418563f47e944d959d454befe280e5ff",
+      "content_dependencies": null
     },
     {
       "cell_type": "code",
@@ -5743,7 +5766,8 @@
       ],
       "outputs_reference": null,
       "execution_count": null,
-      "block_group": "7f5eeb2696244b7ba676514ae616dae4"
+      "block_group": "7f5eeb2696244b7ba676514ae616dae4",
+      "content_dependencies": null
     },
     {
       "cell_type": "code",
@@ -5789,7 +5813,8 @@
       ],
       "outputs_reference": null,
       "execution_count": null,
-      "block_group": "5f4504e34b70401f9448a4447ee9016b"
+      "block_group": "5f4504e34b70401f9448a4447ee9016b",
+      "content_dependencies": null
     },
     {
       "cell_type": "markdown",
@@ -5843,7 +5868,8 @@
       ],
       "outputs_reference": null,
       "execution_count": null,
-      "block_group": "b3b22497090a445391b22ab23157744b"
+      "block_group": "b3b22497090a445391b22ab23157744b",
+      "content_dependencies": null
     },
     {
       "cell_type": "code",
@@ -5868,7 +5894,8 @@
       ],
       "outputs_reference": null,
       "execution_count": null,
-      "block_group": "9029c1b712a147f98ee811b0011f33af"
+      "block_group": "9029c1b712a147f98ee811b0011f33af",
+      "content_dependencies": null
     },
     {
       "cell_type": "markdown",
@@ -5909,7 +5936,8 @@
       ],
       "outputs_reference": null,
       "execution_count": null,
-      "block_group": "54907a01f99640db861e6ef346999c98"
+      "block_group": "54907a01f99640db861e6ef346999c98",
+      "content_dependencies": null
     },
     {
       "cell_type": "markdown",
@@ -5950,7 +5978,8 @@
       ],
       "outputs_reference": null,
       "execution_count": null,
-      "block_group": "9502b21170cd47418c7824fa2009c571"
+      "block_group": "9502b21170cd47418c7824fa2009c571",
+      "content_dependencies": null
     },
     {
       "cell_type": "markdown",
@@ -5989,7 +6018,8 @@
       ],
       "outputs_reference": null,
       "execution_count": null,
-      "block_group": "53fdd302230f480da9bda7e6eb4f20ad"
+      "block_group": "53fdd302230f480da9bda7e6eb4f20ad",
+      "content_dependencies": null
     },
     {
       "cell_type": "markdown",
@@ -6043,7 +6073,8 @@
       ],
       "outputs_reference": null,
       "execution_count": null,
-      "block_group": "bbf362ba3b5045d0825372f3c08ca55f"
+      "block_group": "bbf362ba3b5045d0825372f3c08ca55f",
+      "content_dependencies": null
     },
     {
       "cell_type": "markdown",
@@ -6217,7 +6248,8 @@
       ],
       "outputs_reference": null,
       "execution_count": null,
-      "block_group": "796c342c2e42483d9829db954f1204e3"
+      "block_group": "796c342c2e42483d9829db954f1204e3",
+      "content_dependencies": null
     },
     {
       "cell_type": "markdown",
@@ -6340,7 +6372,8 @@
       ],
       "outputs_reference": null,
       "execution_count": null,
-      "block_group": "cdfeb0abf9604333bd5aca12a15527c7"
+      "block_group": "cdfeb0abf9604333bd5aca12a15527c7",
+      "content_dependencies": null
     },
     {
       "cell_type": "markdown",
@@ -6503,7 +6536,8 @@
       ],
       "outputs_reference": null,
       "execution_count": null,
-      "block_group": "7446a5d01d1a459b8aca4df75a97d900"
+      "block_group": "7446a5d01d1a459b8aca4df75a97d900",
+      "content_dependencies": null
     },
     {
       "cell_type": "markdown",
@@ -6667,7 +6701,8 @@
       ],
       "outputs_reference": null,
       "execution_count": null,
-      "block_group": "8b0b972d67b441c1afaa71ab9901370a"
+      "block_group": "8b0b972d67b441c1afaa71ab9901370a",
+      "content_dependencies": null
     },
     {
       "cell_type": "markdown",
@@ -7044,7 +7079,8 @@
       ],
       "outputs_reference": null,
       "execution_count": null,
-      "block_group": "c0966c1ab43b4fb684e2b951519c27f0"
+      "block_group": "c0966c1ab43b4fb684e2b951519c27f0",
+      "content_dependencies": null
     },
     {
       "cell_type": "markdown",
@@ -7104,7 +7140,8 @@
       "outputs": [],
       "outputs_reference": null,
       "execution_count": null,
-      "block_group": "26f01abf097041a38847160481f5cb4d"
+      "block_group": "26f01abf097041a38847160481f5cb4d",
+      "content_dependencies": null
     },
     {
       "cell_type": "markdown",
@@ -7491,7 +7528,8 @@
       ],
       "outputs_reference": null,
       "execution_count": null,
-      "block_group": "b7142e5c41fe4775b60f9c7c76165bfa"
+      "block_group": "b7142e5c41fe4775b60f9c7c76165bfa",
+      "content_dependencies": null
     },
     {
       "cell_type": "markdown",
@@ -7971,7 +8009,8 @@
       ],
       "outputs_reference": null,
       "execution_count": null,
-      "block_group": "ff5ffac6c40b48b79ff51f6237a4785b"
+      "block_group": "ff5ffac6c40b48b79ff51f6237a4785b",
+      "content_dependencies": null
     },
     {
       "cell_type": "markdown",
@@ -8492,7 +8531,8 @@
       ],
       "outputs_reference": null,
       "execution_count": null,
-      "block_group": "bc28ea0326f74b2ea429fd39a08b0b1a"
+      "block_group": "bc28ea0326f74b2ea429fd39a08b0b1a",
+      "content_dependencies": null
     },
     {
       "cell_type": "markdown",
